src/other/mico-2.3.12/test/idl/error/case17.idl

/*
 * constant declaration of improper type
 */

typedef any _ANY;
const _ANY c = 1;
